Geometry Nodes : Empty string input to Attribute Remove causes Error #88578

Closed
opened 2021-05-25 21:17:00 +02:00 by Gorgious · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-22 04:53, hash: f7b22fc3d2
Worked: Latest 2.93 nightly build (1a69d491e5)

Introduced with b084b57fbf

Short description of error
Plugging an empty string output from a node group into an Attribute Remove input prints an error in the console. No add-on enabled.
It doesn't hard crash but seems to randomly make the file unstable, a crash eventually happens afterwards doing seemingly unrelated things.
I've narrowed it down to a combination of nodes :

image.png

Inside the node group :

image.png

Exact steps for others to reproduce the error
Brand new file :

Create a Cube
Add a GN modifier
Plug Attribute Remove node between input and output nodes
Plug string node into the Attribute Remove second input
Select the string node
CTRL G to group
Delete the string node

Console prints error :

Code marked as unreachable has been executed. Please report this as a bug.
Error found at C:\Users\blender\git\blender-vdev\blender.git\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:1475 in operator ().

See Blend file and error logs attached

blender-bug.blend

blender_system_info.txt

blender_debug_output.txt

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-22 04:53, hash: `f7b22fc3d2` Worked: Latest 2.93 nightly build (1a69d491e57c) Introduced with b084b57fbf **Short description of error** Plugging an empty string output from a node group into an Attribute Remove input prints an error in the console. No add-on enabled. It doesn't hard crash but seems to randomly make the file unstable, a crash eventually happens afterwards doing seemingly unrelated things. I've narrowed it down to a combination of nodes : ![image.png](https://archive.blender.org/developer/F10141760/image.png) Inside the node group : ![image.png](https://archive.blender.org/developer/F10141762/image.png) **Exact steps for others to reproduce the error** Brand new file : Create a Cube Add a GN modifier Plug Attribute Remove node between input and output nodes Plug string node into the Attribute Remove second input Select the string node CTRL G to group Delete the string node Console prints error : ``` Code marked as unreachable has been executed. Please report this as a bug. Error found at C:\Users\blender\git\blender-vdev\blender.git\source\blender\modifiers\intern\MOD_nodes_evaluator.cc:1475 in operator (). ``` See Blend file and error logs attached [blender-bug.blend](https://archive.blender.org/developer/F10141765/blender-bug.blend) [blender_system_info.txt](https://archive.blender.org/developer/F10141767/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F10141766/blender_debug_output.txt)
Author

Added subscriber: @nathan.hild

Added subscriber: @nathan.hild
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, introduced with b084b57fbf

Can confirm, introduced with b084b57fbf

This issue was referenced by 7b62a54230

This issue was referenced by 7b62a542308db63da0e32dbacef4030a1b939b6e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-06-10 17:25:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88578
No description provided.