Fix T88578: crash when loading value from group output node

It remembered the wrong origin socket and couldn't find the value
anymore later on.